--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/express": "^4.11.1",
     "@types/mongoose": "^5.0.2",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^5.0.7",
     "requirejs": "^2.3.5"
