--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Professional chat Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc ./api/src/app.ts --outDir ./api/",
+    "start": "node ./api/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +20,7 @@
   "homepage": "https://github.com/chaterz/chaterz#readme",
   "dependencies": {
     "@types/express": "^4.11.1",
-    "@types/mongoose": "^5.0.2",
+    "@types/mongoose": "^5.0.4",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^5.0.7",
